manifests/workloads/unifi/unifi-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
  namespace: unifi
  labels:
    app.kubernetes.io/name: unifi
spec:
  parentRefs:
    - name: envoy-gateway-external
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - unifi.chik4ge.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: unifi-backend
